# rpg_consent_finder

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.debug.yml  docker-compose.yml  inspect_coverage.py  kill_it.ps1  last_coverage.json  metrics.md  playfun_explanation.md  playfun_explanation_en.md  pyproject.toml  pytest.ini  readme.md  util_tools.py
db/: database.sqlite
migrations/: env.py
migrations/versions/: 2025_02_06_2348-79b50df2294f_initial.py  2025_02_08_1353-f5d9064a4f20_add_cascade_delete.py  2025_02_09_1446-23c8dd9cfcf7_add_invite_code.py  2025_02_09_2327-4ec9bf632b41_new_start.py  2025_02_12_2343-fc4cd0b02103_clean_init_with_localizedtext.py  2025_02_13_0041-605de7d396d1_localized_texts_are_unique.py  2025_02_18_2156-7a83e6d44c95_add_userlogin.py  2025_02_27_1225-059be63fec29_add_playfun_questions.py  2025_11_26_2242-8f751cf861d1_playstyle_now_in_db.py
src/: a_logger_setup.py  guided_tour.py  main.py  public_share_qr.py  settings.py  telemetry.py  utlis.py
src/components/: consent_display_component.py  consent_entry_component.py  consent_legend_component.py  content_question_component.py  custom_consent_entry_component.py  dialog_components.py  faq_element_component.py  layout.py  playfun_plot_component.py  preference_consent_display_component.py  preference_ordered_sheet_display_component.py  sheet_display_component.py  sheet_editable_component.py  tab_components.py
src/controller/: admin_controller.py  group_controller.py  playfun_controller.py  sheet_controller.py  user_controller.py  util_controller.py
src/localization/: language_manager.py
src/localization/texts/: de.json  en.json
src/models/: controller.py  db_models.py  model_utils.py  models.py  seeder.py
src/pages/: admin_page.py  content_trigger_view.py  dsgvo.py  faq_page.py  group_overview.py  home.py  login_page.py  news_page.py  page_template.md  page_template.py  playfun.py  public_sheet.py  questioneer.py  sheet_page.py
src/services/: __init__.py  async_utils.py  group_service.py  home_service.py  service_utils.py  session_service.py  sheet_service.py
tests/: COMPONENT_TESTING.md  conftest.py  test_auth_hardening.py  test_consent_entry_component.py  test_faq_element_component.py  test_group.py  test_group_db_integration.py  test_playstyle.py  test_public_pages.py  test_sheet.py  test_signup.py  utils.py
tests/unit/: conftest.py  test_group_service.py
(+34 files in other folders)
