[tool.poetry]
name = "rpg-consent-finder"
version = "0.2.7"
description = ""
authors = ["Lester1989 <l.ester@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
nicegui = "^2.9.0"
sqlmodel = "^0.0.24"
alembic = "^1.14.0"
qrcode = "^8.0"
pyotp = "^2.9.0"
pillow = "^11.1.0"
bcrypt = "^4.2.1"
fastapi-sso = "^0.17.0"
colorama = "^0.4.6"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
pydantic-core = "^2.31.1"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-selenium = "^4.1.0"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
