[tool.poetry]
name = "rpg-consent-finder"
version = "0.2.18"
description = ""
authors = ["Lester1989 <l.ester@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
nicegui = "^3.2.0"
sqlmodel = "^0.0.27"
alembic = "^1.14.0"
qrcode = "^8.0"
pyotp = "^2.9.0"
pillow = "^12.0.0"
bcrypt = "^5.0.0"
fastapi-sso = "^0.18.0"
colorama = "^0.4.6"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
pydantic-core = "^2.31.1"
pydantic = "^2.10.6"
opentelemetry-distro = "^0.60b1"
opentelemetry-exporter-otlp = "^1.39.1"
opentelemetry-api = "^1.39.1"
opentelemetry-sdk = "^1.39.1"
opentelemetry-instrumentation = "^0.60b1"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-selenium = "^4.1.0"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
